Fixed security vulnerability

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "scripts": {
     "start": "nodemon ./index.js"
   },
-  "keywords": ["lodash"],
+  "keywords": [
+    "lodash"
+  ],
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.14"
   }
 }
